# CasioEmuMsvc

./: .gitignore  CasioEmu.sln  CasioEmuMsvc.sln  README.md  WINDOWS-README.txt
CasioEmuMsvc/: CasioEmuMsvc.vcxproj  CasioEmuMsvc.vcxproj.filters  Config.hpp  Emulator.cpp  Emulator.hpp  Logger.cpp  Logger.hpp  Models.h  casioemu.cpp  packages.config
CasioEmuMsvc/Chipset/: CPU.cpp  CPU.hpp  CPUArithmetic.cpp  CPUControl.cpp  CPULoadStore.cpp  CPUPushPop.cpp  Chipset.cpp  Chipset.hpp  InterruptSource.cpp  InterruptSource.hpp  MMU.cpp  MMU.hpp  MMURegion.cpp  MMURegion.hpp
CasioEmuMsvc/Data/: ColourInfo.hpp  EventCode.hpp  HardwareId.hpp  ModelInfo.cpp  (+2 more)
SourceGenerator/: SourceGenerator.cpp  SourceGenerator.vcxproj  SourceGenerator.vcxproj.filters  disas.cpp  example.cpp  help.txt  lib.cpp  lib.h
disas/: disas.vcxproj
disassembler/: disassembler.lua
emulator/: Makefile  README.md  compile_commands.json  emulator.vcxproj  imgui.ini  lua-common.lua  meson.build  packages.config  xmake.lua
emulator/src/: Emulator.cpp  Emulator.hpp  Logger.cpp  casioemu.cpp
emulator/src/Chipset/: CPU.cpp  CPU.hpp  CPUControl.cpp  CPUPushPop.cpp  Chipset.cpp  Chipset.hpp  InterruptSource.cpp  MMU.cpp  MMU.hpp
emulator/src/Data/: EventCode.hpp  HardwareId.hpp  ModelInfo.hpp
emulator/src/Gui/: CodeViewer.cpp  CodeViewer.hpp  Command.cpp  hex.hpp  ui.hpp
emulator/src/Peripheral/: BCDCalc.cpp  BatteryBackedRAM.cpp  BatteryBackedRAM.hpp  Keyboard.cpp  Keyboard.hpp  Miscellaneous.cpp  Miscellaneous.hpp  Screen.cpp  Screen.hpp  Timer.cpp  Timer.hpp
nx-U8_disas/: nx-U8_disas.vcxproj
(+64 files in other folders)
